# nbima

./: .gitignore  CMakeLists.txt  GUI.cxx  GUI.fl  GUI.h  GUI_Spectre.cpp  GUI_Spectre.hpp  README.md  about.html  instructions.html  main.cpp  util.h
